packages/stylist-macros/tests/css_macro/nested_blocks-fail.stderr
error: Can not nest qualified blocks (yet)
 --> $DIR/nested_blocks-fail.rs:4:13
  |
4 |             .inner {
  |             ^
